--- a/src/compoments/footer/Footer.css
+++ b/src/compoments/footer/Footer.css
@@ -9,6 +9,7 @@
     z-index: -2;
     bottom: 0;
     left: 0;
+    /* overflow-x: hidden; */
 
 }
 
@@ -25,7 +26,7 @@
 
 .footer-contact {
     font-size: 15px;
-    padding: 100px 0 30px 50px;
+    padding: 15px 0 30px 50px;
     width: 70%;
     margin: 0 auto;
 }
@@ -73,8 +74,20 @@
     color: white;
 }
 
+.curriculum{
+    position:absolute;
+    width: 100%;
+    height: 100%;
+}
+
 
 @media only screen and (max-width: 960px) {
+    .footer{
+        width: 100%;
+        height: 100%;
+        overflow-x: hidden;
+
+    }
     .footer-information {
         text-align: center;
         padding: 0;
