--- a/src/compoments/information/Information.css
+++ b/src/compoments/information/Information.css
@@ -1,30 +1,68 @@
+.title{
+    letter-spacing: 0.4rem;
+    padding: 2%;
+    margin: 0%;
+    text-align-last: center;
+}
+.imagen{
+    width: 100%;
+}
+.imagen img{
+    width: 50%;
+    display: block;
+    margin: auto;
+    padding: 8px;
+    box-shadow: black;
+    border-radius: 20px;
+    transition: 0.5s filter;
+}
 .information-container {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: white;
     color: black;
     margin-bottom: 100vh;
 }
 
 .information {
-    display: flex;
+    width: 100%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: .5rem;
+    row-gap: .5rem;
+    justify-content: center;
+    gap: 1rem;
+    /* background-color: violet; */
+    /* transition: 0.4s filter; */
+
+    /* display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 100%; */
 }
-
-
+.imagen img:hover{
+    filter: brightness(0.3);
+}
 @media only screen and (max-width: 960px) {
     .information-container {
-        /* height: 200px; */
         width: 100%;
-        
+        height: 100%;
 
     }
     .information > h1 {
         text-align: center;
         font-size: 25px;
-
     }
+
+    .information{
+        width: 100%;
+        margin: auto;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: .5rem;
+    }
+
+    
     
 }
